Changed SCSS back to CSS, renamed library, and fixed spacing for multiple alerts.

--- a/docroot/modules/custom/sitenow_signage/css/signage_alerts.css
+++ b/docroot/modules/custom/sitenow_signage/css/signage_alerts.css
@@ -6,7 +6,9 @@
   z-index: 4;
 
   .alert.alert--icon.alert--danger {
-    margin: 0;
+    margin-bottom: 0;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .custom-alert-wrapper {
